# kilocode-codebase-self-mcp

./: .gitignore  LICENSE  README.md
01_docs/: CodebaseIndexKilocode.txt  CodebaseIndexKilocodeTest.txt
01_docs/kilocode git cmd/: AllPullReq2vsix.md  pullReq2vsix.md  source2vsix.md
03_source/.log/code-index-mcp/: hot-reloading-with-docker.md
03_source/dev/: embedding_models_explanation.md  variant_c_explanation_ru.md
03_source/dev/miniDev-fix-qdrant-all-collections/: promt_dev.md  promt_run_for_kilocode_ai_assistent.md
03_source/dev/miniDev-fix-qdrant-all-collections/python/: MIGRATION_GUIDE.md  README_qdrant.md  USAGE.md  check_and_fix.py  check_and_fix_with_config.py  check_status.py  config.yaml  manager.py  qdrant_config.py  qdrant_config_analysis.md  qdrant_manager.py  qdrant_manager_with_config.py  requirements.txt  test_config_system.py  test_requirements.txt
03_source/dev/miniDev-test-ollama-speed-embed/: promt_dev.md  promt_run_for_kilocode_ai_assistent.md
03_source/dev/miniDev-test-ollama-speed-embed/Variant_base/: README.md  config.yaml  manual_cmd.md  ollama_embedding_test_20251227_165140.csv  ollama_embedding_test_20251227_165140.json  ollama_embedding_test_20251227_165140_report.txt  ollama_embedding_test_20251228_101749.csv  ollama_embedding_test_20251228_101749.json  ollama_embedding_test_20251228_101749_report.txt  pyproject.toml  requirements.txt  run.bat  test_ollama_speed_pro.py
03_source/dev/miniDev-test-ollama-speed-embed/Variant_reserv/: README.md  (+7 more)
04_rls/: rls_notes.docx
04_rls/qdrant_docker-image/: docker-compose.yml  install.md
(+25 files in other folders)
